base, can launch a window